<resources>
    <string name="app_name">FashionStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ggmap_apikey">AIzaSyAZQtUsYMVdmPgulpjq4d58sU_HfGl3JAM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close\n</string>
    <string name="logout">Đăng xuất</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="chatbot">ChatBot</string>
    <string name="profile">Profile</string>
    <string name="onboarding_image">onboarding image</string>
    <string name="quote1">Find The \nBest Collections</string>
    <string name="quote2">Get your dream item easily with FashionStore\n and get other intersting offer</string>
    <string name="sign_in">Sign In</string>
    <string name="store_name">FashionStore</string>
    <string name="login">Đăng nhập</string>
    <string name="login_quote1">Xin chào, trước tiên bạn phải đăng nhập để có thể \nsử dụng ứng dụng các tính năng trong FashionStore</string>
    <string name="email_addr">Địa chỉ Email</string>
    <string name="email_hint">Email của bạn</string>
    <string name="password">Mật Khẩu</string>
    <string name="password_hint">Nhập mật khẩu</string>
    <string name="forgot_pw">Quên mật khẩu ?</string>
    <string name="txt_login">Đăng nhập</string>
    <string name="google">Google</string>
    <string name="login_with">Hoặc đăng nhập với</string>
    <string name="login_question">Bạn chưa có tài khoản?</string>
    <string name="register">Đăng kí</string>
    <string name="sign_up">Tạo tài khoản</string>
    <string name="sign_up2">Hãy cùng nhau tạo tài khoản</string>
    <string name="your_name">Tên của bạn</string>
    <string name="sign_up_question">Bạn đã có tài khoản?</string>
    <string name="see_more">Xem thêm</string>
    <string name="see_less" translatable="false">See less</string>
    <string name="best_seller">Bán chạy nhất</string>
    <string name="best_discount">Giảm giá nhiều nhất</string>
    <string name="cart">Giỏ hàng</string>
    <string name="payment">Thanh toán</string>
    <string name="myorders">Lịch sử đặt hàng</string>
    <string name="detail">Chi tiết</string>
    <string name="close">Đóng</string>
    <string name="apply">Áp dụng</string>
    <string name="price">Giá tiền</string>
    <string name="category">Danh mục</string>
    <string name="reset">Đặt lại</string>
    <string name="filter">Bộ lọc</string>
    <string name="detail2">Chi tiết sản phẩm</string>
    <string name="add_cart">Thêm vào giỏ</string>
    <string name="description_text" translatable="false"> Áo sweater nam thu đông ANI24027 là sản phẩm mới nhất nằm trong BST WINTER COLLECTION của 5S FASHION với chất liệu thân thiện với da. Vải có kết cấu hai lớp với mặt ngoài Cotton x Poly vừa mềm mịn, thấm hút vừa có độ bền cao, hạn chế bai gião; mặt trong là sự kết hợp của Poly và Spandex với ưu điểm giữ ấm, giữ nhiệt tốt, co giãn đa chiều, đàn hồi, mang lại cảm giác êm ái, dễ chịu cho người mặc.</string>
    <string name="quantity">Số lượng:</string>
    <string name="size">Size</string>
    <string name="non_order">Không có đơn hàng</string>
    <string name="quantity_text">x3</string>
    <string name="private_exp">450.000đ</string>
    <string name="total">Tổng tiển</string>
    <string name="product_quantity_exp">2 sản phẩm</string>
    <string name="order_status">Trạng thái đơn hàng</string>
    <string name="thank_order">Cảm ơn bạn đã mua hàng từ chúng tôi!</string>
    <string name="contact_info">Thông tin liên hệ</string>
    <string name="cust_name">Le Van Kien</string>
    <string name="cust_phone">(+084) 0961016881</string>
    <string name="cust_addr">Yen Khe, Yen Thuong, Gia Lam, Ha Noi</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="order_code">Mã đơn hàng</string>
    <string name="order_time">Thời gian đặt hàng</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="stage_description">Stage description</string>
    <string name="save">Lưu</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="bank">Ngân hàng</string>
    <string name="shipment_method">Phương thức vận chuyển</string>
    <string name="confirm">Xác nhận</string>
    <string name="confirm_code">Mã Xác Thực</string>
    <string name="new_pw">Mật Khẩu Mới</string>
    <string name="gender">Giới tính</string>
    <string name="click_to_change">Nhấn để đổi</string>
    <string name="credit_card">Thẻ tín dụng/Ghi nợ</string>
    <string name="add_new_card">+ Thêm thẻ mới</string>
    <string name="add_bank_account">+ Thêm tài khoản ngân hàng</string>
    <string name="account">Tài khoản</string>
    <string name="account_info">Thông Tin Tài Khoản</string>
    <string name="setting_app">Cài Đặt Ứng Dụng</string>
    <string name="s_d_ng_v_n_tay_thanh_to_n">Sử Dụng Vân Tay Để Thanh Toán</string>
    <string name="setting">Cài đặt</string>
    <string name="add_address">+ Thêm địa chỉ mới</string>
    <string name="nh_p_s_nh">Nhập số nhà,...</string>
    <string name="delete">Xóa</string>
    <string name="set_defaul_addr">Đặt làm địa chỉ mặc định</string>
    <string name="defaul">Địa chỉ mặc định</string>

</resources>