<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screen.auth.SignUpFragment">

    <TextView
        android:id="@+id/txtStoreName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray_light1"
        android:gravity="center"
        android:text="@string/store_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSignUp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/txt_onboarding1"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/txtStoreName" />

    <TextView
        android:id="@+id/txtSignUp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/sign_up2"
        android:textColor="@color/gray_light2"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txtSignUp1" />

    <LinearLayout
        android:id="@+id/layoutSignUpTyping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSignUp2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textColor="@color/gray_light2"
            android:textSize="17sp"
            android:textStyle="normal" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/loginName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/gray_light2"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/txtNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/your_name"
                android:inputType="text"
                android:textSize="15sp" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/gender"
            android:textColor="@color/gray_light2"
            android:textSize="17sp"
            android:textStyle="normal" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/signupGender"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/gray_light2"
            app:strokeWidth="1dp">

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/angle_down" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_addr"
            android:textColor="@color/gray_light2"
            android:textSize="17sp"
            android:textStyle="normal" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/gray_light2"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/txtEmailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/email_hint"
                android:textSize="15sp" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/gray_light2"
            android:textSize="17sp"
            android:textStyle="normal" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/gray_light2"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/txtPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/btnShowPassword"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/show_password_icon"
                app:tint="@color/gray_light2" />

            <ImageView
                android:id="@+id/btnHidePassword"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/hide_password_icon"
                android:visibility="invisible"
                app:tint="@color/gray_light2" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layoutSignUpTyping">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_color"
                android:text="@string/register"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_question"
            android:textColor="@color/gray_light2"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/txt_login"
            android:textColor="@color/primary_color"
            android:textSize="17sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>